--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 	margin: 0;
 }
 
-h1 a {
+.google-header h1 a {
 	text-decoration: none;
 	color: inherit;
 }
@@ -44,9 +44,9 @@ h1 a {
     width: 16px;
     height: 16px;
     position: absolute;
-    right: 5px;
-    top: 8px;
-    left: auto;
+    /* right: 5px; */
+    top: 9px;
+    left: 7px;
     cursor: pointer;
     opacity: .4;
 }
