Added a number of improvements to the alert system. Options page now correctly refreshes the calendar

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,9 @@ body {
     border-top: black 1px solid;
 }
 
+#loader-box a { color: #5E87B0;}
+#loader-box a:hover { color: #E47911;}
+
 .event_color {
 	float: left;
 	width: 5px;
