--- a/css/options.css
+++ b/css/options.css
@@ -1,5 +1,5 @@
 body {
-	margin: 0;
+	margin: 0 0 20px;
 	font-size: 12px;
 	font-family: 'Open Sans', sans-serif;
 }
@@ -15,7 +15,7 @@ h1 {
 	padding: 18px 0 13px;
 	color: #5C6166;
 	font-size: 1.5em;
-	font-weight: normal;			
+	font-weight: normal;
 	-webkit-user-select: none;
 }
 
@@ -84,6 +84,7 @@ section.selected {
     left: 150px;
     opacity: 1;
     z-index: 2;
+    padding-bottom: 20px;
 }
 
 /* Sizing for generic form elemnts */
@@ -92,13 +93,13 @@ input {
     width: 56px;
 }
 label { margin-left: 8px; }
-label.big { 
+label.big {
     display: block;
     margin-bottom: 5px;
-    margin-left: 0; 
+    margin-left: 0;
 }
 
-label.big ~ input {
+label.big ~ input, label.big ~ select {
     margin-left: 9px;
 }
 
@@ -118,7 +119,7 @@ input[type='color']{
 }
 
 .field {
-    
+
     margin-bottom: 10px;
 }
 
